# nintendo-rss

./: Cargo.toml  README.md
src/: main.rs
