[package]
name = "nintendo-rss"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = "0.15.1"
chrono = "0.4.38"
dotenv = "0.15.0"
lambda_runtime = "0.13.0"
reqwest = { version = "0.12.5", features = ["json"] }
rss = "2.0.8"
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
openssl = { version = "0.10.35", features = ["vendored"] }